--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ allprojects {
 	group "org.springframework.boot"
 
 	repositories {
+		// 阿里云镜像
+		maven {url'https://maven.aliyun.com/nexus/content/groups/public/'}
+		maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'}
+		
 		mavenCentral()
 		if (!version.endsWith('RELEASE')) {
 			maven { url "https://repo.spring.io/milestone" }
