--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,7 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
 
 kotlinVersion=1.3.72
+## 启用新的孵化模式
+org.gradle.configureondemand=true
+## 开启守护进程 通过开启守护进程，下一次构建的时候，将会连接这个守护进程进行构建，而不是重新fork一个gradel构建进程
+org.gradle.daemon=true
