--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,8 @@ pluginManagement {
 
 plugins {
 	id "com.gradle.enterprise" version "3.3.3"
-	id "io.spring.gradle-enterprise-conventions" version "0.0.3"
+	// 如要认证授权
+//	id "io.spring.gradle-enterprise-conventions" version "0.0.3"
 }
 
 rootProject.name="spring-boot-build"
@@ -80,3 +81,5 @@ file("${rootDir}/spring-boot-project/spring-boot-starters").eachDirMatch(~/sprin
 file("${rootDir}/spring-boot-tests/spring-boot-smoke-tests").eachDirMatch(~/spring-boot-smoke-test.*/) {
 	include "spring-boot-tests:spring-boot-smoke-tests:${it.name}"
 }
+include 'spring-boot-source-read'
+
